--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^6.4.1",
     "@mui/material": "^6.4.1",
     "@reduxjs/toolkit": "^2.5.0",
+    "colorthief": "^2.6.0",
     "firebase": "^11.2.0",
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
@@ -21,7 +22,9 @@
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-redux": "^9.2.0"
+    "react-redux": "^9.2.0",
+    "react-spring": "^9.7.5",
+    "react-swipeable": "^7.0.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
