--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.1",
     "@mui/material": "^6.4.1",
+    "@react-spring/web": "^9.7.5",
     "@reduxjs/toolkit": "^2.5.0",
     "colorthief": "^2.6.0",
     "firebase": "^11.2.0",
@@ -23,7 +24,6 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
-    "react-spring": "^9.7.5",
     "react-swipeable": "^7.0.2"
   },
   "devDependencies": {
